[build-system]
build-backend = "poetry.masonry.api"
requires = ["poetry>=0.12"]

[tool]
[tool.poetry]
authors = ["Your Name <you@example.com>"]
description = ""
name = "zombie-survival-game-v001"
version = "0.1.0"
[tool.poetry.dependencies]
colorama = "^0.4.3"
python = "^3.7"
[tool.poetry.dev-dependencies]
